[package]
name = "kestrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
colored = "2.0.4"
guess_host_triple = "0.1.3"
inkwell = { version = "0.2.0", features = ["llvm14-0"] }
trc = "1.2.1"
