[package]
name = "kestrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
colored = "2.0.4"
guess_host_triple = "0.1.3"
indexmap = "2.0.0"
inkwell = { version = "0.2.0", features = ["llvm14-0"] }
strum = { version = "0.25.0", features = ["derive"] }
trc = "1.2.1"
unicode-width = "0.1.10"
